# apps/auth-service/src/routes/auth.router.ts
@@ -1,9 +1,14 @@
 import express, { Router } from 'express';
-import { userRegistration, verifyUser } from '../controllers/auth.controller';
+import { resetUserPassword, userForgotPassword, userLogin, userRegistration, verifyUser } from '../controllers/auth.controller';
+import { verifyForgotPasswordOtp } from '../utils/auth.helper';
 
 const router: Router = express.Router();
 
 router.post("/user-registration", userRegistration);
 router.post("/verify-user", verifyUser);
+router.post("/login-user", userLogin);
+router.post("/forgot-password-user", userForgotPassword);
+router.post("/reset-password-user", resetUserPassword);
+router.post("/verify-forgot-password-user", verifyForgotPasswordOtp);
 
 export default router;
